hphp/hack/test/typecheck/akempty/akempty_promotion_9.php.like_types.exp
File "akempty_promotion_9.php", line 15, characters 5-6:
Invalid argument (Typing[4110])
File "akempty_promotion_9.php", line 18, characters 12-29:
Expected ~darray<int, string> because it is an unenforceable type
File "akempty_promotion_9.php", line 10, characters 5-8:
But got varray<(string | nothing)> because a value is appended to it
